--- a/WpfApp3/ThemeDesigner.xaml
+++ b/WpfApp3/ThemeDesigner.xaml
@@ -6,14 +6,22 @@
         xmlns:local="clr-namespace:MusicPlayer.UIComponents"
         mc:Ignorable="d"
         Title="ThemeDesigner" Height="450" Width="400" MaxHeight="450" MaxWidth="400">
-    <Grid Margin="8,8,0,0">
+    <Grid Name="grdMain" Margin="8,8,0,0">
         <Grid.RowDefinitions>
+            <RowDefinition Height="32"></RowDefinition>
             <RowDefinition Height="9*"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-
-        <ScrollViewer VerticalAlignment="Top">
-                <Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <ComboBox Name="cbThemes" Grid.Column="0" Height="24" Margin="4" ItemsSource="{Binding Path=LoadedThemes}" DisplayMemberPath="Name"/>
+            <Button Name="btnLoad" Content="Load" Click="btnLoad_Click" Height="24" Grid.Column="1"></Button>
+        </Grid>
+        <ScrollViewer Name="svFields" VerticalAlignment="Top" Grid.Row="1">
+            <Grid Name="grdFields">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
@@ -30,7 +38,7 @@
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
-
+                
                 <TextBlock Text="Theme Name" VerticalAlignment="Center" Grid.Row="0"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="0">
                     <TextBox Name="itbName" Text="{Binding Path=CustomTheme.Name, UpdateSourceTrigger=PropertyChanged}" VerticalContentAlignment="Center" MaxLength="30" BorderThickness="2" Width="128" Margin="8,4,4,4"/>
@@ -39,61 +47,62 @@
                 <TextBlock Text="Window Accent" VerticalAlignment="Center" Grid.Row="1"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="1">
                     <TextBox Name="itbWindowAccentHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.WindowAccent.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" MouseLeftButtonUp="Rectangle_MouseLeftButtonUp"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.WindowAccent.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
 
                 <TextBlock Text="Window Content Background" VerticalAlignment="Center" Grid.Row="2"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="2">
                     <TextBox Name="itbWindowContentBackgroundHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.WindowContentBackground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.WindowContentBackground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
 
                 <TextBlock Text="Window Title Foreground" VerticalAlignment="Center" Grid.Row="3"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="3">
                     <TextBox Name="itbWindowTitleForegroundHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.WindowTitleForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.WindowTitleForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
 
                 <TextBlock Text="List Box Item Foreground" VerticalAlignment="Center" Grid.Row="4"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="4">
                     <TextBox Name="itbListBoxItemForegroundHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.ListBoxItemForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.ListBoxItemForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
 
                 <TextBlock Text="Current Song Title Foreground" VerticalAlignment="Center" Grid.Row="5"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="5">
                     <TextBox Name="itbCurrentSongTitleForegroundHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.CurrentSongTitleForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.CurrentSongTitleForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
 
                 <TextBlock Text="Current Song Artist Foreground" VerticalAlignment="Center" Grid.Row="6"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="6">
                     <TextBox Name="itbCurrentSongArtistForegroundHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.CurrentSongArtistForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.CurrentSongArtistForeground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
 
                 <TextBlock Text="Music Control Background" VerticalAlignment="Center" Grid.Row="7"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="7">
                     <TextBox Name="itbMusicControlBackgroundHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.MusicControlBackground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.MusicControlBackground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
 
                 <TextBlock Text="Title Bar Background" VerticalAlignment="Center" Grid.Row="8"/>
                 <StackPanel Orientation="Horizontal" Height="32" Grid.Column="1" Grid.Row="8">
                     <TextBox Name="itbTitleBarBackgroundHex" TextChanged="TextBox_TextChanged" VerticalContentAlignment="Center" BorderThickness="2" MaxLength="9" Width="128" Margin="8,4,4,4"/>
-                    <Rectangle Fill="{Binding Path=CustomTheme.TitleBarBackground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center"/>
+                    <Rectangle Fill="{Binding Path=CustomTheme.TitleBarBackground.Brush, UpdateSourceTrigger=PropertyChanged}" Width="24" Height="24" Margin="4" VerticalAlignment="Center" Stroke="Black" StrokeThickness="1"/>
                 </StackPanel>
-
+                
 
             </Grid>
         </ScrollViewer>
-        <Grid Grid.Row="1">
+        <Grid Name="grdButtons" Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Button Name="btnSave" Content="Save" Grid.Row="1" Click="btnSave_Click"></Button>
-            <Button Name="btnLoad" Content="Load" Grid.Row="1" Grid.Column="1" Click="btnLoad_Click"></Button>
+            <Button Name="btnApply" Content="Apply" Grid.Row="1" Grid.Column="1" Click="btnApply_Click"></Button>
+            
         </Grid>
 
     </Grid>
