--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -14,61 +14,181 @@
         <WindowChrome CaptionHeight="0"/>
     </WindowChrome.WindowChrome>
 
-    <Border CornerRadius="15"
-        Background="White"
-        BorderBrush="White"
-        BorderThickness="1"
-        ClipToBounds="True">
-       
-        <Grid Name="grdMain" Background="Transparent">
-        
+    <Grid Name="grdMain" Background="Transparent">
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="32"/> <!-- Title Bar Height -->
-            <RowDefinition Height="6*"/> <!-- Content Page Height -->
-            <RowDefinition Height="1*"/> <!-- Music Control Bar -->
+            <RowDefinition Height="32"/>
+            <!-- Title Bar -->
+            <RowDefinition Height="*"/>
+            <!-- Content -->
+            <RowDefinition Height="90"/>
+            <!-- Music Control Bar -->
         </Grid.RowDefinitions>
 
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="120"/>
-        </Grid.ColumnDefinitions>
-
-            <Grid Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Width="Auto" Height="Auto" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                <TextBlock x:Name="tbCurrentSongTitle" Text="{Binding Cache.CurrentSong.Title}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="18" FontWeight="Bold" Foreground="{Binding CurrentTheme.CurrentSongTitleForeground.Brush}"/>
-                <TextBlock x:Name="tbCurrentSongArtist" Text="{Binding Cache.CurrentSong.Artist}" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="14" Foreground="{Binding CurrentTheme.CurrentSongArtistForeground.Brush}"/>
-                <Grid Background="Transparent">
-                    <Image Source="{Binding Cache.CurrentSong.AlbumArt}" Width="150" Height="150"/>
-                </Grid>
-            </StackPanel>
-        </Grid>
-
-        <GridSplitter Background="{Binding CurrentTheme.WindowAccent.Brush}" Grid.Row="1" Grid.Column="0" Width="2" HorizontalAlignment="Right" Panel.ZIndex="3">
-        </GridSplitter>
+        <Border Name="WindowContentBackground" Grid.ColumnSpan="3" Grid.RowSpan="3" 
+                Background="{Binding CurrentTheme.WindowContentBackground.Brush}" 
+                CornerRadius="15"/>
 
         <Grid Grid.Row="1">
-            <ListBox Grid.Row="1" Grid.Column="0" Background="Transparent" Foreground="{Binding CurrentTheme.ListBoxItemForeground.Brush}"
-            ItemsSource="{Binding Cache.Songs}" 
-            SelectedItem="{Binding Cache.CurrentSong, Mode=TwoWay}"
-            DisplayMemberPath="Title" Width="200"
-            HorizontalAlignment="Stretch"/>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="140"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="160"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+
+           
+
+            <Border CornerRadius="13" Background="{Binding CurrentTheme.MusicControlBackground.Brush}" Margin="10,10" Grid.Column="1">
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    
+                    <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Margin="50" Grid.Column="0" Grid.Row="0">
+                        <TextBlock x:Name="tbCurrentSongTitle" 
+                           Text="{Binding MusicPlayerCache.CurrentSong.Title}" 
+                           FontSize="18" FontWeight="Bold" 
+                           Foreground="{Binding CurrentTheme.CurrentSongTitleForeground.Brush}" 
+                           HorizontalAlignment="Center"/>
+                        <TextBlock x:Name="tbCurrentSongArtist" 
+                           Text="{Binding MusicPlayerCache.CurrentSong.Artist}" 
+                           FontSize="14" 
+                           Foreground="{Binding CurrentTheme.CurrentSongArtistForeground.Brush}" 
+                           HorizontalAlignment="Center"/>
+                        <Image Source="{Binding MusicPlayerCache.CurrentSong.AlbumArt}" 
+                       Width="150" Height="150"/>
+                    </StackPanel>
+
+                    <ListBox Grid.Column="1" Margin="50" BorderThickness="0" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                    Background="Transparent" Foreground="{Binding CurrentTheme.ListBoxItemForeground.Brush}" ItemsSource="{Binding MusicPlayerCache.Songs}" SelectedItem="{Binding MusicPlayerCache.CurrentSong, Mode=TwoWay}"
+                    HorizontalAlignment="Stretch">
+
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="0, 8">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="Auto"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock Grid.Column="0" Text="{Binding Index}" FontSize="14" Foreground="Gray" VerticalAlignment="Center" Margin="0, 0, 20, 0"/>
+                                    <StackPanel Grid.Column="1" Orientation="Vertical">
+                                    <TextBlock Text="{Binding Title}" FontWeight="SemiBold" FontSize="14" Foreground="Black"/>
+                                    <TextBlock Text="{Binding Artist}" FontSize="12" Foreground="Gray"/>
+                                    </StackPanel>
+                                    <TextBlock Grid.Column="2" Text="{Binding Duration}" FontSize="12" Foreground="Gray" VerticalAlignment="Center"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+
+                        <ListBox.ItemContainerStyle>
+                            <Style TargetType="ListBoxItem">
+                                <Setter Property="Background" Value="Transparent"/>
+                                <Setter Property="BorderThickness" Value="0"/>
+                                <Setter Property="Padding" Value="5"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="ListBoxItem">
+                                            <Border Background="{TemplateBinding Background}">
+                                                <ContentPresenter/>
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#F0F0F0"/>
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter Property="Background" Value="#E6E6E6"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </ListBox.ItemContainerStyle>
+
+                    </ListBox>
+
+                    <Grid Grid.Row="1" Grid.ColumnSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                            <ColumnDefinition></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="20"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Text="Similar Songs" Margin="50, 0, 0, 0" FontSize="18" FontWeight="Bold"></TextBlock>
+                    <WrapPanel Grid.Row="1" Grid.Column="0" Background="Transparent" Margin="50, 0, 0, 0">
+                        <TextBlock x:Name="tbSimilarSong1" 
+                         Text="{Binding MusicPlayerCache.CurrentSong.Title}" 
+                         FontSize="18" FontWeight="Bold" 
+                         Foreground="{Binding CurrentTheme.CurrentSongTitleForeground.Brush}" 
+                         HorizontalAlignment="Center"/>
+                         <TextBlock x:Name="tbSimilarSong1Artist" 
+                         Text="{Binding MusicPlayerCache.CurrentSong.Artist}" 
+                         FontSize="14"
+                         Foreground="{Binding CurrentTheme.CurrentSongArtistForeground.Brush}" 
+                         HorizontalAlignment="Center"/>
+                        <Image x:Name="SimilarSong1Image" Source="{Binding MusicPlayerCache.CurrentSong.AlbumArt}" 
+                         Width="150" Height="150"/>
+                    </WrapPanel>
+                    </Grid>
+                </Grid>
+            </Border>
         </Grid>
 
-            <Border x:Name="MusicControlBar" Background="{Binding CurrentTheme.MusicControlBackground.Brush}" CornerRadius="15" Grid.Row="2" Grid.ColumnSpan="3" BorderBrush="{Binding CurrentTheme.MusicControlBackground.Brush}" BorderThickness="1"
-                    HorizontalAlignment="Stretch" MaxHeight="80">
-                <Grid HorizontalAlignment="Right">
+        <Grid Grid.Row="2" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.25*"/>
+                <ColumnDefinition Width="15*"/>
+                <ColumnDefinition Width="0.25*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            
+            <Border x:Name="MusicControlBar" 
+                Background="{Binding CurrentTheme.MusicControlBackground.Brush}" 
+                CornerRadius="13"
+                Height="70"
+                Margin="10,10"
+                Grid.Column="1"    
+                BorderBrush="{Binding CurrentTheme.MusicControlBackground.Brush}" 
+                BorderThickness="1"
+                HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+                <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="250"/>
-                        <ColumnDefinition Width="120"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="5"/>
+                        <RowDefinition Height="2"/>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="5"/>
                     </Grid.RowDefinitions>
-                    <Grid Width="500" Height="50" Grid.Row="1">
-                        <Viewbox Stretch="Uniform" MaxWidth="350" HorizontalAlignment="Center">
+
+                    <Grid Grid.Row="1" Grid.Column="1">
+                        <Viewbox Stretch="Uniform" MaxWidth="350" MinWidth="350" HorizontalAlignment="Center">
                             <Grid Width="200">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto"/>
@@ -86,44 +206,53 @@
                             </Grid>
                         </Viewbox>
                     </Grid>
-                    <Grid Grid.Column="1" Grid.Row="1">
-                        <Button Content="Switch Theme" Click="SwitchButton_Click"/>
-                    </Grid>
                 </Grid>
             </Border>
-
-
-            <Grid x:Name="grdTitle" Background="Black"
-              Grid.Column="0" Grid.Row="0"
-              Grid.ColumnSpan="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="20"></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition Width="130"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-
-            <Border Background="{Binding Path=CurrentTheme.WindowAccent.Brush}" Margin="-8,7,8,7" CornerRadius="1" Grid.Row="0" Grid.Column="0"/>
-            <TextBlock Name="tbWindowTitle" Text="{Binding Path=WindowTitle}" Foreground="{Binding Path=CurrentTheme.WindowTitleForeground.Brush}" VerticalAlignment="Center" HorizontalAlignment="Center"
-                       Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="1"/>
-            <Border Name="borderWindowMove" Grid.Row="0" Grid.Column="1" Background="Transparent" MouseDown="borderWindowMove_MouseDown"/>
-
-            <StackPanel x:Name="spHeaderItems" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                
-                <Grid Name="grdSettings" VerticalAlignment="Stretch" MouseEnter="grdSettings_MouseEnter" MouseLeave="grdSettings_MouseLeave" MouseLeftButtonUp="grdSettings_MouseLeftButtonUp">
-                    <TextBlock Name="tbSettings" Text="⚙" Foreground="White" Width="32" FontSize="11" TextAlignment="Center" VerticalAlignment="Center"/>
-                </Grid>
-                <Grid Name="grdMinimize" VerticalAlignment="Stretch" MouseEnter="grdMinimize_MouseEnter" MouseLeave="grdMinimize_MouseLeave" MouseLeftButtonUp="grdMinimize_MouseLeftButtonUp">
-                    <TextBlock Name="tbMinimize" Text="─" Foreground="White" Width="32" TextAlignment="Center" VerticalAlignment="Center" />
-                </Grid>
-                <Grid Name="grdResize" VerticalAlignment="Stretch" MouseEnter="grdResize_MouseEnter" MouseLeave="grdResize_MouseLeave" MouseLeftButtonUp="grdResize_MouseLeftButtonUp">
-                    <TextBlock Name="tbResize" Text="🗗" Foreground="White" Width="32" TextAlignment="Center" VerticalAlignment="Center"/>
-                </Grid>
-                <Grid Name="grdClose" VerticalAlignment="Stretch"  MouseEnter="grdClose_MouseEnter" MouseLeftButtonUp="grdClose_MouseLeftButtonUp" MouseLeave="grdClose_MouseLeave">
-                    <TextBlock Name="tbClose" Text="✕" Foreground="White" Width="32" TextAlignment="Center" VerticalAlignment="Center"/>
-                </Grid>
-            </StackPanel>
-        </Grid>
-    
+        <Button Content="Switch Theme" Click="SwitchButton_Click" HorizontalAlignment="Right" Grid.Column="1" Grid.Row="1" Height="20"/>
     </Grid>
-    </Border>
+        
+        <Border Background="Black" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" CornerRadius="10">
+            <Grid x:Name="grdTitle">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="130"/>
+                </Grid.ColumnDefinitions>
+
+                <Border Background="{Binding Path=CurrentTheme.WindowAccent.Brush}" 
+                        Margin="-8,7,8,7" CornerRadius="1" Grid.Row="0" Grid.Column="0"/>
+
+                <TextBlock Name="tbWindowTitle" Text="{Binding Path=WindowTitle}" 
+                           Foreground="{Binding Path=CurrentTheme.WindowTitleForeground.Brush}" 
+                           VerticalAlignment="Center" HorizontalAlignment="Center"
+                           Grid.Row="0" Grid.Column="1"/>
+                <Border Name="borderWindowMove" Grid.Row="0" Grid.Column="1" Background="Transparent" MouseDown="borderWindowMove_MouseDown"/>
+
+                <StackPanel x:Name="spHeaderItems" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+
+                    <Grid Name="grdSettings" VerticalAlignment="Stretch" 
+                          MouseEnter="grdSettings_MouseEnter" MouseLeave="grdSettings_MouseLeave" 
+                          MouseLeftButtonUp="grdSettings_MouseLeftButtonUp">
+                        <TextBlock Name="tbSettings" Text="⚙" Foreground="White" Width="32" FontSize="11" TextAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+                    <Grid Name="grdMinimize" VerticalAlignment="Stretch" 
+                          MouseEnter="grdMinimize_MouseEnter" MouseLeave="grdMinimize_MouseLeave" 
+                          MouseLeftButtonUp="grdMinimize_MouseLeftButtonUp">
+                        <TextBlock Name="tbMinimize" Text="─" Foreground="White" Width="32" TextAlignment="Center" VerticalAlignment="Center" />
+                    </Grid>
+                    <Grid Name="grdResize" VerticalAlignment="Stretch" 
+                          MouseEnter="grdResize_MouseEnter" MouseLeave="grdResize_MouseLeave" 
+                          MouseLeftButtonUp="grdResize_MouseLeftButtonUp">
+                        <TextBlock Name="tbResize" Text="🗗" Foreground="White" Width="32" TextAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+                    <Grid Name="grdClose" VerticalAlignment="Stretch"  
+                          MouseEnter="grdClose_MouseEnter" MouseLeftButtonUp="grdClose_MouseLeftButtonUp" MouseLeave="grdClose_MouseLeave">
+                        <TextBlock Name="tbClose" Text="✕" Foreground="White" Width="32" TextAlignment="Center" VerticalAlignment="Center"/>
+                    </Grid>
+                </StackPanel>
+            </Grid>
+        </Border>
+
+    </Grid>
+    
 </Window>
