#00007 (Further updates on UI)

--- a/WpfApp3/App.xaml
+++ b/WpfApp3/App.xaml
@@ -4,6 +4,8 @@
              xmlns:local="clr-namespace:WpfApp3"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!--<Style TargetType="{x:Type Control}">
+            <Setter Property="FontFamily" Value="Tahoma"/>
+        </Style>-->
     </Application.Resources>
 </Application>
